; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_lin-lwp.c_status_to_str.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_lin-lwp.c_status_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@status_to_str.buf = internal global [64 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [13 x i8] c"%s (stopped)\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"%s (terminated)\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"%d (exited)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @status_to_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @status_to_str(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 (i32, ...) bitcast (i32 (...)* @WIFSTOPPED to i32 (i32, ...)*)(i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 (i32, ...) bitcast (i32 (...)* @WSTOPSIG to i32 (i32, ...)*)(i32 %7)
  %9 = call i32 (i32, ...) bitcast (i32 (...)* @strsignal to i32 (i32, ...)*)(i32 %8)
  %10 = call i32 (i8*, i64, i8*, ...) @snprintf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @status_to_str.buf, i64 0, i64 0), i64 64, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %25

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 (i32, ...) bitcast (i32 (...)* @WIFSIGNALED to i32 (i32, ...)*)(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = load i32, i32* %2, align 4
  %17 = call i32 (i32, ...) bitcast (i32 (...)* @WSTOPSIG to i32 (i32, ...)*)(i32 %16)
  %18 = call i32 (i32, ...) bitcast (i32 (...)* @strsignal to i32 (i32, ...)*)(i32 %17)
  %19 = call i32 (i8*, i64, i8*, ...) @snprintf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @status_to_str.buf, i64 0, i64 0), i64 64, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %18)
  br label %24

20:                                               ; preds = %11
  %21 = load i32, i32* %2, align 4
  %22 = call i32 (i32, ...) bitcast (i32 (...)* @WEXITSTATUS to i32 (i32, ...)*)(i32 %21)
  %23 = call i32 (i8*, i64, i8*, ...) @snprintf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @status_to_str.buf, i64 0, i64 0), i64 64, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %22)
  br label %24

24:                                               ; preds = %20, %15
  br label %25

25:                                               ; preds = %24, %6
  ret i8* getelementptr inbounds ([64 x i8], [64 x i8]* @status_to_str.buf, i64 0, i64 0)
}

declare dso_local i32 @WIFSTOPPED(...) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, ...) #1

declare dso_local i32 @strsignal(...) #1

declare dso_local i32 @WSTOPSIG(...) #1

declare dso_local i32 @WIFSIGNALED(...) #1

declare dso_local i32 @WEXITSTATUS(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
